--- a/app/src/main/res/layout/activity_settngs.xml
+++ b/app/src/main/res/layout/activity_settngs.xml
@@ -136,7 +136,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/encryptedWallet"
+                android:id="@+id/logout"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:clickable="true"
