--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -26,8 +26,7 @@
             app:itemIconSize="20dp"
             app:itemTextAppearanceActive="@style/bottom_selected_text"
             app:itemTextAppearanceInactive="@style/bottom_normal_text"
-            app:labelVisibilityMode="labeled"
-            app:menu="@menu/bottom_nav_menu" />
+            app:labelVisibilityMode="labeled" />
 
     </RelativeLayout>
 
