--- a/app/src/main/res/layout/item_income.xml
+++ b/app/src/main/res/layout/item_income.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="@{incomeUtil.parserIncomeTime(income.incomeTime)}"
+            android:text="@{income.time}"
             android:textColor="#6D7686"
             android:textSize="11sp"
             tools:text="2021.03.29" />
