--- a/app/src/main/res/layout/fragment_extract_coin.xml
+++ b/app/src/main/res/layout/fragment_extract_coin.xml
@@ -8,6 +8,9 @@
         <variable
             name="handler"
             type="com.metron.coin.base.BindClickListener" />
+        <variable
+            name="type"
+            type="String" />
     </data>
 
     <LinearLayout
@@ -56,7 +59,7 @@
                             android:layout_marginLeft="4dp"
                             android:layout_marginTop="5dp"
                             android:layout_toRightOf="@+id/value1"
-                            android:text="BTC"
+                            android:text="@{type}"
                             android:textColor="#6D7686"
                             android:textSize="8sp" />
 
@@ -99,7 +102,7 @@
                             android:layout_marginLeft="4dp"
                             android:layout_marginTop="5dp"
                             android:layout_toRightOf="@+id/value2"
-                            android:text="BTC"
+                            android:text="@{type}"
                             android:textColor="#6D7686"
                             android:textSize="8sp" />
 
@@ -151,7 +154,7 @@
                             android:layout_marginLeft="4dp"
                             android:layout_marginTop="5dp"
                             android:layout_toRightOf="@+id/value3"
-                            android:text="BTC"
+                            android:text="@{type}"
                             android:textColor="#6D7686"
                             android:textSize="8sp" />
 
@@ -194,7 +197,7 @@
                             android:layout_marginLeft="4dp"
                             android:layout_marginTop="5dp"
                             android:layout_toRightOf="@+id/value4"
-                            android:text="BTC"
+                            android:text="@{type}"
                             android:textColor="#6D7686"
                             android:textSize="8sp" />
 
