--- a/app/src/main/res/layout/fragment_minter_all.xml
+++ b/app/src/main/res/layout/fragment_minter_all.xml
@@ -9,6 +9,18 @@
             name="handler"
             type="com.metron.coin.base.BindClickListener" />
 
+        <variable
+            name="minterValues"
+            type="int[]" />
+
+        <variable
+            name="minterCountBTC"
+            type="int" />
+
+        <variable
+            name="minterCountETH"
+            type="int" />
+
     </data>
 
     <LinearLayout
@@ -37,7 +49,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"
+                        android:text="@{String.valueOf(minterValues[0])}"
                         android:textColor="@color/white"
                         android:textSize="24sp" />
 
@@ -61,7 +73,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"
+                        android:text="@{String.valueOf(minterCountETH)}"
                         android:textColor="@color/white"
                         android:textSize="24sp" />
 
@@ -85,7 +97,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"
+                        android:text="@{String.valueOf(minterCountBTC)}"
                         android:textColor="@color/white"
                         android:textSize="24sp" />
 
@@ -118,7 +130,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"
+                        android:text="@{String.valueOf(minterValues[1])}"
                         android:textColor="@color/white"
                         android:textSize="24sp" />
 
@@ -142,7 +154,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"
+                        android:text="@{String.valueOf(minterValues[2])}"
                         android:textColor="@color/white"
                         android:textSize="24sp" />
 
@@ -166,7 +178,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"
+                        android:text="@{String.valueOf(minterValues[3])}"
                         android:textColor="@color/white"
                         android:textSize="24sp" />
 
