--- a/app/src/main/res/layout/item_withdraw.xml
+++ b/app/src/main/res/layout/item_withdraw.xml
@@ -37,6 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:paddingRight="20dp"
             android:text="@{String.valueOf(withdraw.id)}"
             android:textColor="#6D7686"
             android:textSize="11sp"
@@ -67,6 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:paddingLeft="16dp"
             android:text="@{statusList[withdraw.status]}"
             android:textColor="#6D7686"
             android:textSize="11sp"
