--- a/app/src/main/res/layout/fragment_minter_btc.xml
+++ b/app/src/main/res/layout/fragment_minter_btc.xml
@@ -156,6 +156,8 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:layout_width="match_parent"
                     android:layout_height="72dp"
                     android:orientation="horizontal">
