更新普通用户订单和渠道专员订单数据及UI

--- a/app/src/main/res/layout/activity_extract_coin.xml
+++ b/app/src/main/res/layout/activity_extract_coin.xml
@@ -43,8 +43,11 @@
 
             <ImageView
                 android:id="@+id/title_left"
+                style="@style/ClickableStyle_"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
+                android:clickable="true"
+                android:onClick="@{handler.click}"
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_back_black" />
 
