--- a/app/src/main/res/layout/fragment_channel_orders.xml
+++ b/app/src/main/res/layout/fragment_channel_orders.xml
@@ -36,8 +36,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:emptyView="@layout/layout_no_data"
-            app:viewHolderClass="com.metron.coin.adapter.OrderAdapter"
-            app:viewHolderLayout="@layout/item_order" />
+            app:viewHolderClass="com.metron.coin.adapter.OrderChannelAdapter"
+            app:viewHolderLayout="@layout/item_order_channel" />
 
     </LinearLayout>
 
