--- a/app/src/main/res/layout/layout_title_bar_black.xml
+++ b/app/src/main/res/layout/layout_title_bar_black.xml
@@ -7,6 +7,7 @@
 
     <ImageView
         android:id="@+id/title_left"
+        style="@style/ClickableStyle_"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:scaleType="centerInside"
