--- a/app/src/main/res/layout/item_withdraw.xml
+++ b/app/src/main/res/layout/item_withdraw.xml
@@ -28,16 +28,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="38dp"
-        android:gravity="center_vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:gravity="center_vertical">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingRight="20dp"
             android:text="@{String.valueOf(withdraw.id)}"
             android:textColor="#6D7686"
             android:textSize="11sp"
@@ -68,7 +65,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingLeft="16dp"
             android:text="@{statusList[withdraw.status]}"
             android:textColor="#6D7686"
             android:textSize="11sp"
