--- a/app/src/main/res/layout/layout_title_bar_black_fragment.xml
+++ b/app/src/main/res/layout/layout_title_bar_black_fragment.xml
@@ -7,6 +7,7 @@
 
     <ImageView
         android:id="@+id/title_left"
+        style="@style/ClickableStyle_"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:scaleType="centerInside"
@@ -24,6 +25,7 @@
 
     <TextView
         android:id="@+id/title_right"
+        style="@style/ClickableStyle_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
